--- a/routeprofile-ir/src/main/resources/lucene.properties
+++ b/routeprofile-ir/src/main/resources/lucene.properties
@@ -1,2 +1,2 @@
 # Full path to Lucene index.
-lucene.index.path=/home/jose/MASTER/RIWS/RI/solr-4.8.1/example/solr/collection1/data/index
+lucene.index.path=/home/aian/workspace/data/index
