--- a/routeprofile-web/src/main/webapp/WEB-INF/web.xml
+++ b/routeprofile-web/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,6 @@
   </filter>
   <filter-mapping>
     <filter-name>AuthenticationFilter</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/route/*</url-pattern>
   </filter-mapping>
 </web-app>
